feat: ship tar to simplify deployment on ER

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
         run: npm run build
 
       - name: Package
-        run: npm run zip
+        run: tar -czvf edgerouter-dashboard.tar.gz .
+        working-directory: ./build
 
       - name: Release
         env:
