build: fix tar creation

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run build
 
       - name: Package
-        run: tar -czvf edgerouter-dashboard.tar.gz .
+        run: tar -czvf ../edgerouter-dashboard.tar.gz .
         working-directory: ./build
 
       - name: Release
