--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "/dashboard",
   "dependencies": {
-    "@dan-escott/react-dashboard": "^2.1.1",
+    "@dan-escott/react-dashboard": "^2.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -13,9 +13,14 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-tabs": "^2.3.2",
+    "chart.js": "^2.9.4",
+    "chartjs-chart-treemap": "^0.2.3",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "react-tabs": "^3.2.1",
     "typescript": "^4.1.3",
     "web-vitals": "^1.1.0"
   },
